examples/smoke/type_error/example.py
def type_error() -> bool:
    return None
